基础待机走跑

--- a/TPS_Demo.uproject
+++ b/TPS_Demo.uproject
@@ -18,6 +18,14 @@
 		{
 			"Name": "AnimationWarping",
 			"Enabled": true
+		},
+		{
+			"Name": "GameplayInsights",
+			"Enabled": true
+		},
+		{
+			"Name": "TraceSourceFilters",
+			"Enabled": true
 		}
 	]
 }
